# YourHealthTime

./: .gitignore  10-I-INF-308216.docx  README.md
backend/: .env  Dockerfile  coverage.xml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt
backend/src/clinic/: admin.py  apps.py  fields.py  filters.py  mixins.py  models.py  pagination.py  permissions.py  serializers.py  throttling.py  validators.py
backend/src/clinic/auth/: admin.py  backends.py  choices.py  managers.py  models.py  recaptcha.py  serializers.py  urls.py  views.py
backend/src/clinic/dictionaries/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/src/clinic/migrations/: 0001_initial.py
backend/src/clinic/roles/: admin.py  choices.py  filters.py  models.py  querysets.py  serializers.py  urls.py  views.py
backend/src/clinic/treatment/: admin.py  choices.py  filters.py  models.py  querysets.py  serializers.py  urls.py  views.py
backend/src/core/: settings.py  urls.py
backend/tests/clinic/: conftest.py
backend/tests/clinic/auth/: conftest.py  test_change_password_view.py  test_force_logout_view.py  test_login_view.py  test_logout_view.py  test_models.py  test_register_view.py  test_reset_password_confirm_view.py  test_reset_password_view.py  test_token_lifetime_view.py  test_user_info_view.py  test_verify_email_view.py
backend/tests/clinic/dictionaries/: test_country_viewset.py  test_dictionaries_models.py  test_disease_viewset.py  test_medicine_viewset.py  test_office_viewset.py  (+1 more)
(+472 files in other folders)
