[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 79
exclude = [".git", "__pycache__", ".venv", ".vscode", ".dockerignore", ".gitignore"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "N"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["clinic"]